--- a/web-app/css/rosten/themes/jsnz/css/jsnz.css
+++ b/web-app/css/rosten/themes/jsnz/css/jsnz.css
@@ -134,128 +134,22 @@
 	background: url(../images/user_tree_leaf.gif) no-repeat;
 }
 
-/*
- *	grid css
- */ 
 
-.rosten .rostenGridView {
-    border-right: 0px solid #eCe8b9;
-    border-top: 1px solid #F6F4EB;
-    border-bottom: 1px solid #eCe8b9;
-    border-left: 0px solid #F6F4EB;
-    padding: 0;
-    width: 100%;
-    -moz-user-select: none;
-} .rosten .rostenGridView table {
-    font-size: 12px;
-    font-weight: normal;
-    border-collapse: collapse;
-    width: 100%;
-    padding: 0px;
-    margin: 0;
-    display: table !important;
-    display: block;
-} .rosten .rostenGridView td {
-    border-left: 1px solid #eee;
-    border-right: 0px solid #bbb;
-    border-top: 0px;
-    border-bottom: 0px;
-    line-height: 20px;
-} .rosten .rostenGridView th {
-    line-height: 22px;
-} .rosten .rostenGridView .dojoxGridHeader,.rosten .rostenGridView .dojoxGridHeader .dojoxGridCell{
-	/*
-	 * 表格表头样式
-	 */
+/*
+ * grid css
+ */
+.rosten .rostenGridView .dojoxGridHeader .dojoxGridCell,.rosten .rostenGridView .dojoxGridRowbarOver,.rosten .rostenGridView .dojoxGridRowOver .dojoxGridCell,.rosten .rostenGridView .pagecontrol{
  	background: url(../images/titleBar_bg.png) repeat-x;
-}.rosten .rostenGridView .dojoxGridHeader .dijitCheckBox{
-	margin-top:4px;
-	margin-left:1px;
-} .rosten .rostenGridView .dojoxGridRowSelected{
-	/*
-	 * 表格选中后背景
-	 */
-	 background-color:#F6F3CA;
-} .rosten .rostenGridView .dojoxGridRowbar{
+ }
+.rosten .rostenGridView .dojoxGridRowbar{
 	background-image:url(../images/row_back.png);
-	background-color:white;
-}.rosten .rostenGridView .dojoxGridRowbarOver{
-	/*
-	 * 表格内容鼠标移动时选择框背景
-	 */
-	background-color:#FFFFFF;
-}.rosten .rostenGridView .dojoxGridRowOver .dojoxGridCell{
-	/*
-	 * 表格内容鼠标移动时表格数据背景
-	 */
-	background-image:url(../images/row_back.png);
-	background-color:#F6F3CA;
-	color:#4A4AFF;
-}.rosten .rostenGridView .dojoxGridRowbarSelected .dojoxGridRowbarInner {
-	background-image:none;
-    background-repeat: no-repeat;
-} .rosten .rostenGridView .dojoxGridRowbarSelected{
-	background:none;
-} .rosten .rostenGridView .dojoxGridCellFocus{
-	/*
-	 * 表格内容鼠标选中表格数据时去除表格内列边框
-	 */
-	border:none;
-}  .rosten .rostenGridView .pagecontrol {
-	border-top:1px solid #ccc;
-	font-size:12px;
-	/*bottom: 0;*/
-	padding: 0px; 
-	position: absolute;
-	width:100%;
-	text-indent: 0px;
-} .rosten .rostenGridView .pagecontrol .dijitInputInner{
-	text-align:center;
-} .rosten .rostenGridView .prevpagelink {
-    cursor: hand;
-    width: 16px;
-    height: 16px;
-    background: url('../images/page-prev.gif') no-repeat;
-} .rosten .rostenGridView .prevpagelinkdisabled {
-    cursor: hand;
-    width: 16px;
-    height: 16px;
-    background: url('../images/page-prev-disabled.gif') no-repeat;
-} .rosten .rostenGridView .nextpagelink {
-    cursor: hand;
-    width: 16px;
-    height: 16px;
-    background: url('../images/page-next.gif') no-repeat;
-} .rosten .rostenGridView .nextpagelinkdisabled {
-    cursor: hand;
-    width: 16px;
-    height: 16px;
-    background: url('../images/page-next-disabled.gif') no-repeat;
-} .rosten .rostenGridView .lastpagelink {
-    cursor: hand;
-    width: 16px;
-    height: 16px;
-    background: url('../images/page-last.gif') no-repeat;
-} .rosten .rostenGridView .lastpagelinkdisabled {
-    cursor: hand;
-    width: 16px;
-    height: 16px;
-    background: url('../images/page-last-disabled.gif') no-repeat;
-} .rosten .rostenGridView .firstpagelink {
-    cursor: hand;
-    width: 16px;
-    height: 16px;
-    background: url('../images/page-first.gif') no-repeat;
-} .rosten .rostenGridView .firstpagelinkdisabled {
-    cursor: hand;
-    width: 16px;
-    height: 16px;
-    background: url('../images/page-first-disabled.gif') no-repeat;
-} .rosten .rostenGridView .gotopage {
-    width: 25px;
-    font-size: 12px;
-    padding: 0;
-    height: 20px;
 }
+.rosten .rostenGridView .dojoxGridRowbar{
+	background-color:white;
+}
+.rosten .rostenGridView .dojoxGridRowbarOver{
+	background-color:#E1EBFB;
+}
+
 
 
