--- a/web-app/js/rosten/widget/templates/RostenGrid.html
+++ b/web-app/js/rosten/widget/templates/RostenGrid.html
@@ -24,7 +24,7 @@
         	<span >页&nbsp;</span>
         	<span>总共</span>
         	<span data-dojo-attach-point="totalCount" style="margin-left:5px;margin-right:5px;"></span>
-        	<img data-dojo-attach-point="loadingimg" src='images/rosten/share/wait.gif' style="margin-right:5px;width:16px;height:16px;display:none;"/>
+        	<img data-dojo-attach-point="loadingimg" src='${imgSrc}' style="margin-right:5px;width:16px;height:16px;display:none;"/>
         	<span style="margin-right:20px">条记录</span>
 	        
 		</div>
