--- a/web-app/css/rosten/themes/normal/css/normal.css
+++ b/web-app/css/rosten/themes/normal/css/normal.css
@@ -158,6 +158,9 @@ td.errors textarea {
 	/*border:1px solid #c8c8c8;*/
 	background-color: #60a1ea; 
 }
+.rosten .simpleNavigation .bgClass{
+	background-image:url("../images/titleBar_bg.png");
+}
 
 /*
  * 弹出广告样式
@@ -217,7 +220,7 @@ td.errors textarea {
 /*
  * grid css
  */
-.rosten .rostenGridView .dojoxGridHeader .dojoxGridCell,.rosten .rostenGridView .dojoxGridRowbarOver,.rosten .rostenGridView .dojoxGridRowOver .dojoxGridCell,.rosten .rostenGridView .pagecontrol{
+.rosten .rostenGridView .dojoxGridHeader,.rosten .rostenGridView .dojoxGridHeader .dojoxGridCell,.rosten .rostenGridView .dojoxGridRowbarOver,.rosten .rostenGridView .dojoxGridRowOver .dojoxGridCell,.rosten .rostenGridView .pagecontrol{
  	background: url(../images/titleBar_bg.png) repeat-x;
  }
 .rosten .rostenGridView .dojoxGridRowbar{
